--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.2",
     "next": "12.2.5",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
