--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.2.5",
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-facebook-pixel": "^1.0.4"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
